--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=INFO,CONSOLE,R,HTML,TTCC,fileout
- datestamp=yyyy-MM-dd HH:mm:ss.SSS 
+ # datestamp=yyyy-MM-dd HH:mm:ss.SSS 
  
-// Here we define the appender
+# Here we define the appender
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.TTCC=org.apache.log4j.RollingFileAppender
@@ -9,14 +9,14 @@ log4j.appender.HTML=org.apache.log4j.FileAppender
 log4j.appender.fileout=org.apache.log4j.ConsoleAppender
 log4j.appender.fileout=org.apache.log4j.DailyRollingFileAppender
  
-// Here we define log file location
+# Here we define log file location
 log4j.appender.R.File=./log/testlog.log
 log4j.appender.TTCC.File=./log/testlog1.log
 log4j.appender.HTML.File=./log/application.html
-log4j.appender.fileout.File=./log/TC_%d{yyyy-MM-dd HH:mm:ss}.log
+log4j.appender.fileout.File=./log/TC_%d{yyy y-MM-dd HH:mm:ss}.log
 
  
-// Here we define the layout and pattern
+# Here we define the layout and pattern
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern= [%d{ISO8601}] %X{sessionId} %p %c - %m%n
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
